{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 38,
  "lineage": "af1355d2-2f3f-048b-fec7-4604f7add1cf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "amazon",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07810a490b4267374",
            "arn": "arn:aws:ec2:ap-northeast-2:749271020003:instance/i-01080a51749e4a02c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01080a51749e4a02c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awsiac",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-009e6d602f0a90a5b",
            "private_dns": "ip-10-222-0-245.ap-northeast-2.compute.internal",
            "private_ip": "10.222.0.245",
            "public_dns": "ec2-13-124-168-104.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.168.104",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05739e4abd2a278a7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f53cdddc1e5fcb19",
            "tags": {
              "Name": "apne2-ansible-amazon-linux-2",
              "Project": "aws-iac-ansible"
            },
            "tags_all": {
              "Name": "apne2-ansible-amazon-linux-2",
              "Project": "aws-iac-ansible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c55753910d300869"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon",
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07810a490b4267374",
            "arn": "arn:aws:ec2:ap-northeast-2:749271020003:instance/i-0bbd505dba89d3b3b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bbd505dba89d3b3b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awsiac",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c6fccedd9e53297e",
            "private_dns": "ip-10-222-0-249.ap-northeast-2.compute.internal",
            "private_ip": "10.222.0.249",
            "public_dns": "ec2-13-124-171-182.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.171.182",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-078aeef0369e2b777",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f53cdddc1e5fcb19",
            "tags": {
              "Name": "apne2-ansible-amazon-linux-2",
              "Project": "aws-iac-ansible"
            },
            "tags_all": {
              "Name": "apne2-ansible-amazon-linux-2",
              "Project": "aws-iac-ansible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c55753910d300869"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon",
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05a5333b72d3d1c93",
            "arn": "arn:aws:ec2:ap-northeast-2:749271020003:instance/i-05cdac75d6694630c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05cdac75d6694630c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awsiac",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04243b35541f4ceef",
            "private_dns": "ip-10-222-0-111.ap-northeast-2.compute.internal",
            "private_ip": "10.222.0.111",
            "public_dns": "ec2-3-38-250-233.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.38.250.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04b7893b9876bdbf8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f53cdddc1e5fcb19",
            "tags": {
              "Name": "apne2-ansible-ubuntu",
              "Project": "aws-iac-ansible"
            },
            "tags_all": {
              "Name": "apne2-ansible-ubuntu",
              "Project": "aws-iac-ansible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c55753910d300869"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05a5333b72d3d1c93",
            "arn": "arn:aws:ec2:ap-northeast-2:749271020003:instance/i-037d896e4cd98c2ef",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-037d896e4cd98c2ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "awsiac",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aefca589b594a5f3",
            "private_dns": "ip-10-222-0-211.ap-northeast-2.compute.internal",
            "private_ip": "10.222.0.211",
            "public_dns": "ec2-43-201-150-90.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.201.150.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07e3f4ea6d58b2ef0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f53cdddc1e5fcb19",
            "tags": {
              "Name": "apne2-ansible-ubuntu",
              "Project": "aws-iac-ansible"
            },
            "tags_all": {
              "Name": "apne2-ansible-ubuntu",
              "Project": "aws-iac-ansible"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c55753910d300869"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg__ssh",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:749271020003:security-group/sg-0c55753910d300869",
            "description": "Security Group for SSH.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow to communicate to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c55753910d300869",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere.",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere.",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "apne2-ansible-ssh",
            "name_prefix": "",
            "owner_id": "749271020003",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "apne2-ansible-ssh",
              "Project": "aws-iac-ansible",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "apne2-ansible-ssh",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "tags_all": {
              "Name": "apne2-ansible-ssh",
              "Project": "aws-iac-ansible",
              "module.terraform.io/full-name": "terraform-aws-network/security-group",
              "module.terraform.io/instance": "apne2-ansible-ssh",
              "module.terraform.io/name": "security-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7e11c79f83adee1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg__ssh",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow to communicate to the Internet.",
            "from_port": 0,
            "id": "sgrule-563161462",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c55753910d300869",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg__ssh",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH from anywhere.",
            "from_port": 80,
            "id": "sgrule-3779224369",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c55753910d300869",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH from anywhere.",
            "from_port": 22,
            "id": "sgrule-1472740996",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c55753910d300869",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.this",
            "module.sg__ssh.aws_security_group.this"
          ]
        }
      ]
    }
  ]
}